I modife the securityConfig file